# VeeLabAP

./: README.md  pyproject.toml  requirements.txt
src/: .env  __init__.py  app.py  main.py
src/model/: __init__.py  article.py  user.py  users_roles.py
src/route/: __init__.py  articles.py  auth.py  users.py
test/models/: test_article.py  test_role.py  test_user.py
test/routes/: test_articles.py  test_auth.py  test_users.py
test/utils/: test_exception_wrapper.py
