[tool.poetry]
name = "veelabap"
version = "0.1.0"
description = ""
authors = ["Vano4ok <pivtorak.vn4k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.2"
undecorated = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
